# iot-system-api

./: .gitignore  Cargo.toml  Rocket.toml  errors.ts  main.ts  package-lock.json  package.json  utilities.ts
database/: database.ts
error/: errors.ts  handler.ts
handlers/: application.ts  device.ts  mqtt.ts
middlewares/: db_process.ts  security.ts
prisma/: schema.prisma
prisma/migrations/20250417042621_second_init/: migration.sql
prisma/migrations/20250417070137_add_user_verification_keys_model_to_the_db/: migration.sql
prisma/migrations/20250417231459_add_token_to_the_device_model/: migration.sql
prisma/migrations/20250417235243_make_token_in_the_device_model_unique/: migration.sql
prisma/migrations/20250418001547_remove_devicekey_model/: migration.sql
prisma/migrations/20250421033147_first_initialization/: migration.sql
prisma/migrations/20250421050646_changing_topic_mechanism/: migration.sql
prisma/migrations/20250421050745_fix_bug/: migration.sql
prisma/migrations/20250421051120_remove_mqtt_topic_model/: migration.sql
prisma/migrations/20250421051411_add_mqtt_user_and_mqtt_pass_to_the_user_model/: migration.sql
prisma/migrations/20250421073713_create_uniqueness_between_controllable_name_and_its_deviceid/: migration.sql
src/: main.rs  utils.rs
src/api/: device.rs  user.rs
src/db/: mod.rs
src/middlewares/: security.rs
src/types/: api.rs  db_model.rs  error.rs  mod.rs
