[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1"
rand = "0.9.1"
arrayvec = "0.7"
mongodb = "3.2.3"
tokio = { version = "1", features = ["full"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport", "serde"] }
jsonwebtoken = "9.3.1"
chrono = "0.4"